feat: add register service
